--- a/dfplatform/src/main/resources/application.properties
+++ b/dfplatform/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ######\u6570\u636E\u5E93\u5730\u5740\u9700\u8981\u4FEE\u6539
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.2.222:3306/dfplaform?useUnicode=true&characterEncoding=utf8&characterResultSets=utf8&serverTimezone=GMT%2b8
-spring.datasource.username=root
-spring.datasource.password=Timevale#123
+spring.datasource.url=数据库地址
+spring.datasource.username=用户名
+spring.datasource.password=密码
 server.port=8081
 spring.jackson.time-zone=GMT+8
 logging.level.org.springframework.web.servlet=INFO
