--- a/dfplatform/src/main/resources/application.properties
+++ b/dfplatform/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-######\u6570\u636E\u5E93\u5730\u5740\u9700\u8981\u4FEE\u6539
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=数据库地址
 spring.datasource.username=用户名
 spring.datasource.password=密码
-server.port=8081
+server.port=端口号
 spring.jackson.time-zone=GMT+8
 logging.level.org.springframework.web.servlet=INFO
 logging.level.org.springframework.beans.factory=INFO
@@ -20,9 +19,7 @@ hystrix.threadpool.default.coreSize=50
 hystrix.threadpool.default.queueSizeRejectionThreshold=10
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
-# \u9759\u6001\u6587\u4EF6\u8BF7\u6C42\u5339\u914D\u65B9\u5F0F
 spring.mvc.static-path-pattern=/**
-# \u4FEE\u6539\u9ED8\u8BA4\u7684\u9759\u6001\u5BFB\u5740\u8D44\u6E90\u76EE\u5F55
 spring.resources.static-locations=classpath:/static/
-httpdPort=8083
+httpdPort=端口号
 httpDocumentRoot=/var/www/html/
